# quantum-protein-folding-research

./: .gitignore  CHANGELOG.md  README.md  environment.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
benchmarks/: __init__.py  quantum_advantage.py  scaling_study.py
docs/: API.md  CONTRIBUTING.md
examples/: 01-quickstart.ipynb  01_quickstart.ipynb  02-advanced-vqe.ipynb  02_hp_model_tutorial.ipynb  03-benchmarking.ipynb  03_vqe_deep_dive.ipynb  04_qaoa_comparison.ipynb  basic_usage.ipynb  complete_workflow.ipynb  quick_start.py
notebooks/: 01_quick_start.ipynb  01_quickstart.ipynb  01_quickstart_tutorial.ipynb  02_advanced_vqe.ipynb  02_vqe_tutorial.ipynb  02_vqe_vs_qaoa_comparison.ipynb  03_benchmarking.ipynb  03_benchmarking_analysis.ipynb  03_qaoa_tutorial.ipynb
src/quantum_protein_folding/: __init__.py
src/quantum_protein_folding/analysis/: __init__.py  metrics.py  plots.py
src/quantum_protein_folding/classical/: __init__.py  baseline.py  energy.py
src/quantum_protein_folding/data/: __init__.py  loaders.py  mj_matrix.py  preprocess.py
src/quantum_protein_folding/models/: __init__.py  qaoa_model.py  vqe_model.py
src/quantum_protein_folding/quantum/: __init__.py  circuit_builder.py  hamiltonian.py  optimizer.py  qaoa.py  vqe.py
tests/: __init__.py  conftest.py  test_analysis.py  test_classical.py  test_classical_algorithms.py  test_data_loaders.py  test_hamiltonian.py  test_integration.py  test_loaders.py  test_preprocessing.py  test_qaoa.py  test_quantum_algorithms.py  test_solvers.py  test_vqe.py
