[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-protein-folding"
version = "0.1.0"
authors = [
    {name = "Tommaso R. Marena", email = "marena@cua.edu"},
]
description = "Quantum algorithms for lattice protein folding using VQE and QAOA"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/Tommaso-R-Marena/quantum-protein-folding-research"
BugTracker = "https://github.com/Tommaso-R-Marena/quantum-protein-folding-research/issues"
Documentation = "https://github.com/Tommaso-R-Marena/quantum-protein-folding-research/blob/main/README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=quantum_protein_folding --cov-report=html --cov-report=term"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
